Fix image parent height 0 resulting in images clipping

--- a/IdeaPress/modules/wordpress/css/wp.module.detail.css
+++ b/IdeaPress/modules/wordpress/css/wp.module.detail.css
@@ -216,6 +216,7 @@
 .comment p,
 .content p {
     padding: 0 !important;
+    overflow: auto;
 }
 
 .comment .wp-caption p,
