--- a/IdeaPress/modules/wordpressCom/css/wpcom.module.detail.css
+++ b/IdeaPress/modules/wordpressCom/css/wpcom.module.detail.css
@@ -219,6 +219,7 @@
 .comment p,
 .content p {
     padding: 0 !important;
+    overflow: auto;
 }
 
 .comment .wpc-caption p,
